// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-knesRu keCzej test-class"
  >
    <div
      class="sc-dnaUSb bFjBsU"
    >
      <label
        class="sc-gnpbhQ jropmu"
        for="test-input-id"
      >
        <span
          class="sc-la-DxNn hspnBd"
        >
          Test Input
        </span>
      </label>
      <span
        class="sc-dkjaqt ehvIGu"
      >
        <input
          aria-errormessage="test-input-id_error"
          aria-invalid="false"
          aria-readonly="false"
          autocomplete="off"
          class="sc-kkmypM bQgZdJ"
          id="test-input-id"
          name="test"
          placeholder="Enter text here..."
          type="text"
          value=""
        />
        <span
          class="sc-jCbFiK gUYGTf"
        >
          <button
            aria-label="Clear input for Test Input"
            class="sc-iKTcqh eMAwbv"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M135.19 390.14a28.79 28.79 0 0021.68 9.86h246.26A29 29 0 00432 371.13V140.87A29 29 0 00403.13 112H156.87a28.84 28.84 0 00-21.67 9.84v0L46.33 256l88.86 134.11z"
                fill="none"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="32"
              />
              <path
                d="M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="32"
              />
            </svg>
          </button>
        </span>
      </span>
    </div>
    <span
      class="sc-dsLQwm Oiwth"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-knesRu keCzej test-class"
  >
    <div
      class="sc-dnaUSb bFjBsU"
    >
      <label
        class="sc-gnpbhQ jropmu"
        for="test-input-id"
      >
        <span
          class="sc-la-DxNn hspnBd"
        >
          Test Input
        </span>
        <abbr
          class="sc-iCZwEW bFhLBv"
          title="required"
        >
          *
        </abbr>
      </label>
      <span
        class="sc-dkjaqt ehvIGu"
      >
        <input
          aria-errormessage="test-input-id_error"
          aria-invalid="false"
          aria-readonly="false"
          autocomplete="off"
          class="sc-kkmypM bQgZdJ"
          id="test-input-id"
          name="test"
          placeholder="Enter text here..."
          required=""
          type="text"
          value=""
        />
        <span
          class="sc-jCbFiK gUYGTf"
        >
          <button
            aria-label="Clear input for Test Input"
            class="sc-iKTcqh eMAwbv"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M135.19 390.14a28.79 28.79 0 0021.68 9.86h246.26A29 29 0 00432 371.13V140.87A29 29 0 00403.13 112H156.87a28.84 28.84 0 00-21.67 9.84v0L46.33 256l88.86 134.11z"
                fill="none"
                stroke="currentColor"
                stroke-linejoin="round"
                stroke-width="32"
              />
              <path
                d="M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33M336.67 192.33L206.66 322.34M336.67 322.34L206.66 192.33"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="32"
              />
            </svg>
          </button>
        </span>
      </span>
    </div>
    <span
      class="sc-dsLQwm Oiwth"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
